feat: (6.3) add GetChatHistory
