# api/manager.v1.swagger.yml
@@ -21,6 +21,25 @@ paths:
               schema:
                 $ref: "#/components/schemas/GetChatsResponse"
 
+  /getChatHistory:
+    post:
+      description: Get chat history.
+      parameters:
+        - $ref: "#/components/parameters/XRequestIDHeader"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/GetChatHistoryRequest"
+      responses:
+        '200':
+          description: Messages list.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetChatHistoryResponse"
+
   /getFreeHandsBtnAvailability:
     post:
       description: Check availability of "Free Hands" button.
@@ -154,3 +173,61 @@ components:
               x-go-type: types.UserID
               x-go-type-import:
                 path: "github.com/pershin-daniil/ninja-chat-bank/internal/types"
+
+ # /getChatHistory
+
+    GetChatHistoryRequest:
+      required: [ chatId ]
+      properties:
+        chatId:
+          type: string
+          format: uuid
+          x-go-type: types.ChatID
+          x-go-type-import:
+            path: "github.com/pershin-daniil/ninja-chat-bank/internal/types"
+        pageSize:
+          type: integer
+          minimum: 10
+          maximum: 100
+        cursor:
+          type: string
+
+
+    GetChatHistoryResponse:
+      properties:
+        data:
+          $ref: "#/components/schemas/MessagesPage"
+        error:
+          $ref: "#/components/schemas/Error"
+
+    MessagesPage:
+      required: [ messages, next ]
+      properties:
+        messages:
+          type: array
+          items: { $ref: "#/components/schemas/Message" }
+        next:
+          type: string
+
+    Message:
+      required: [ id, authorId, body, createdAt, isReceived ]
+      properties:
+        id:
+          type: string
+          format: uuid
+          x-go-type: types.MessageID
+          x-go-type-import:
+            path: "github.com/pershin-daniil/ninja-chat-bank/internal/types"
+        authorId:
+          type: string
+          format: uuid
+          x-go-type: types.UserID
+          x-go-type-import:
+            path: "github.com/pershin-daniil/ninja-chat-bank/internal/types"
+        body:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        isReceived:
+          type: boolean
